--- a/Src/Prosumer/Prosumer.html
+++ b/Src/Prosumer/Prosumer.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<script type="test/javascript" src="script.js"></script> 
+
 <html>
 <body>
-
-<script language="javascript">getWeather();</script>
+<script src="script.js"></script> 
+<script>getWeather();</script>
 
 <h1>Green Lean Electrics</h1>
 <p>Current wind: </p>
