--- a/Src/Prosumer/Prosumer.html
+++ b/Src/Prosumer/Prosumer.html
@@ -1,11 +1,23 @@
 <!DOCTYPE html>
   <head>
-    <link rel="stylesheet" href="/static/style.css"/>
-    <script src="/static/script.js" type="text/javascript">
+    <link rel="stylesheet" href="/static/style.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js" type="text/javascript">
     </script>
   </head>
+
   <body>
-	<script>getWeather();</script>
+	<script>
+		$(document).ready(function() {
+			alert("Yes");
+			$.ajax({
+				url: '52.91.53.73:3000/weather',
+				data:"",
+				success: function(result) {
+					alert(result);
+				}
+			});
+		});
+	</script>
 
 	<h1>Green Lean Electrics</h1>
 	<p>Current wind: </p>
