--- a/Src/Prosumer/Prosumer.html
+++ b/Src/Prosumer/Prosumer.html
@@ -9,7 +9,7 @@
 	<script>
 		$(document).ready(function() {
 			alert("Yess");
-			$.getJSON("https://52.91.53.73:3000/weather?callback=?",function(json){
+			$.getJSON("http://52.91.53.73:3000/weather?callback=?",function(json){
   				console.log(json);
 			});
 		});
