--- a/Src/Prosumer/Prosumer.html
+++ b/Src/Prosumer/Prosumer.html
@@ -8,27 +8,38 @@
   <body>
 
 	<script>
+
 		$(document).ready(function() {
+			
 			$.getJSON("http://52.91.53.73:3000/electricityConsumption",function(json){
 				setConsumption(json.elecConsumption);				
 			});
 			$.getJSON("http://52.91.53.73:3000/weather",function(json){
-				setWind(json.currentWeather);				
+				setWind(json.currentWeather);	
+				setProduction(json.currentWeather);		
 			});
+			setNetProduction();
 		});
 		function setConsumption(elecConsumption){
-			document.getElementById("consumption").innerHTML = elecConsumption;
+			document.getElementById("consumption").innerHTML = elecConsumption*10;
+			consumption = elecConsumption*10;
 		}
 		function setWind(wind){
 			document.getElementById("wind").innerHTML = wind;
 		}
+		function setProduction(wind){
+			document.getElementById("production").innerHTML = wind*10;
+		}
+		function setNetProduction(){
+			document.getElementById("netProduction").innerHTML = document.getElementById("production").value - document.getElementById("consumption").value;
+		}
 	</script>
 
 	<h1>Green Lean Electrics</h1>
-	<p>Current wind: <p id="wind"></p></p>
-	<p>Current production: </p>
-	<p>Current consumption: <p id="consumption"></p> </p>
-	<p>Net production: </p>
+	<p>Current wind: <p id="wind"></p> m/s</p>
+	<p>Current production: <p id="production"></p> kWh</p>
+	<p>Current consumption: <p id="consumption"></p> kWh</p>
+	<p>Net production: <p id="netProduction"></p> kWh</p>
 	<p>Buffer: </p>
 	<p>Current electricity price: </p>
   </body>
