--- a/Src/Prosumer/Prosumer.html
+++ b/Src/Prosumer/Prosumer.html
@@ -38,11 +38,11 @@
 	</script>
 
 	<h1>Green Lean Electrics</h1>
-	<p>Current wind: <p id="wind"></p> m/s</p>
-	<p>Current production: <p id="production"></p> kWh</p>
-	<p>Current consumption: <p id="consumption"></p> kWh</p>
-	<p>Net production: <p id="netProduction"></p> kWh</p>
-	<p>Buffer: </p>
-	<p>Current electricity price: <p id="netProduction"></p> kr</p>
+	<div id="windDiv"> <p>Current wind:</p> <p id="wind"></p> <p>m/s</p> </div>
+	<div id="productionDiv"><p>Current production: <p id="production"></p> kWh</p></div>
+	<div id="consumptionDiv"><p>Current consumption: <p id="consumption"></p> kWh</p></div>
+	<div id="netProductionDiv"><p>Net production: <p id="netProduction"></p> kWh</p></div>
+	<div id="bufferDiv"><p>Buffer: </p></div>
+	<div id="priceDiv"><p>Current electricity price: </p></div>
   </body>
 </html>
